--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 API_PORT = 5002
+MONGO_URI=mongodb+srv://admin:adminpasswordinfi@cluster0.pfgd4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
